[package]
name = "shadow-harvester"
version = "0.3.0"
edition = "2024"
license = "MIT Or Apache-2.0"
repository = "https://github.com/disassembler/shadowharvester"

# --- LIBRARY TARGET CONFIGURATION ---
[lib]
# The name of the library artifact produced (the .rlib file)
name = "shadow_harvester_lib"
# The path to your library code
path = "src/lib.rs"
test = true

[features]
# Enable this feature to use blake2b_simd for hprime function
# default = ["blake2b_simd_hprime"]
blake2b_simd_hprime = []

# --- BINARY TARGET CONFIGURATION ---
[[bin]]
# Sets the executable name (what the user runs)
name = "shadow-harvester"
# Points to the main function for the executable
path = "src/main.rs"
bench = false
harness = false
test = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.release.package."*"]
opt-level = 3

[dependencies]
cryptoxide = "~0.5.1"
fmt = "0.1.0"
getrandom = "0.3"
hex = "0.4"
hex-literal = "1.0.0"
indicatif = "0.17"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] } # FIX: 'blocking' feature is required for reqwest::blocking::Client
serde = { version = "1.0", features = ["derive"] } # FIX: 'derive' feature is required for #[derive(Deserialize)]
serde_json = "1.0" # Added for completeness, often required with serde
pallas-addresses = "0.33"
pallas-crypto = "0.33"
rand_core = { version = "0.6", features = ["std"] }
pallas-configs = "0.33.0"
pallas = "0.33.0"
pallas-codec = "0.33.0"
minicbor = { version = "0.25.1", features = ["derive"] }
bip39 = { version = "2.2.0", features = ["alloc"] }
ed25519-bip32 = "0.4.1"
chrono = "0.4.42"
mpsc = "0.2.6"
sled = "0.34.7"
num-integer = "0.1.46"
tungstenite = "0.28.0"
warp = "0.3"
tokio = { version = "1", features = ["full"] }
regex = "1.12.2"
rand = "0.9"
blake2b_simd = "1.0.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
randomx-rs = "1.3"
hex = "0.4"
indicatif = "0.17"
getrandom = "0.3"
